--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = 328p16m
 build_type = debug  ; agregar para depurar en proteus el 'firmware.elf'
+;upload_port = COM8 ; para setear espesificamente el puerto de programacion espesifico en Windows
+;upload_port = /dev/ttyUSB0 ; en linux
+;build_flags = -v   ; para ver mas detalle de errores
